<resources>
    <!-- app -->
    <string name="app_name">NewWord</string>

    <!-- main nav graph -->
    <string name="words">Words</string>
    <string name="add_edit_words">addEditWords</string>

    <!-- menu main -->
    <string name="search">Search</string>
    <string name="delete_all_words">Delete All Words</string>

    <!-- add edit menu -->
    <string name="delete">Delete</string>

    <!-- context_menu -->
    <string name="delete_word_menu">Delete Word</string>

    <!-- word fragment layout -->
    <string name="add_a_new_word">add a new word button</string>
    <string name="all_words_screen">all words screen</string>
    <string name="no_words">No Words</string>

    <!-- add edit fragment layout -->
    <string name="word">Word</string>
    <string name="add_or_edit_words_screen">add or edit words screen</string>
    <string name="word_input">word input</string>
    <string name="language_origin">language origin</string>
    <string name="language">Language</string>
    <string name="word_meaning">word meaning</string>
    <string name="meaning">Meaning</string>
    <string name="save_word">Save Word</string>

    <!-- delete dialog layout -->
    <string name="delete_dialog">Delete Dialog</string>
    <string name="delete_word">Delete Word?</string>
    <string name="delete_words">Delete Words?</string>
    <string name="_1_word_will_be_permanently_deleted">1 word will be permanently deleted</string>
    <string name="words_will_be_permanently_deleted">%1$s words will be permanently deleted</string>

    <!-- delete dialog progress layout -->
    <string name="_0">%1$d%%</string>
    <string name="_1_1">%1$d/ %2$d</string>
    <string name="deleting">Deleting …</string>

    <!-- word layout -->
    <string name="dummy_text">dummy text</string>
    <string name="w">W</string>

    <!-- word fragment -->
    <string name="search_anything">Search Anything</string>
    <string name="no_results_found">No results found for %1$s</string>
    <string name="items_to_delete">1</string>
    <string name="deleting_canceled">Deleting Canceled</string>

    <!-- add edit word fragment -->
    <string name="add_word">Add Word</string>
    <string name="field_is_required">Field is required</string>
    <string name="successfully_added">Successfully Added</string>
    <string name="word_edit">Word Edit</string>
    <string name="update_word">Update Word</string>
    <string name="Updated_successfully">Updated Successfully</string>
    <string name="successfully_deleted">Successfully Deleted</string>

    <!-- delete dialog class -->
    <string name="cancel_dialog">Cancel</string>
    <string name="delete_dialog_">Delete</string>
</resources>
