<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/delete_dialog"
    android:orientation="vertical">

    <TextView
        android:id="@+id/delete_dialog_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/delete_word"
        android:textColor="@color/from"
        android:textSize="@dimen/msg_text_primary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/delete_dialog_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_1_word_will_be_permanently_deleted"
        android:textColor="@color/subject"
        android:textSize="@dimen/msg_text_secondary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/delete_dialog_title"
        app:layout_constraintStart_toStartOf="@+id/delete_dialog_title"
        app:layout_constraintTop_toBottomOf="@+id/delete_dialog_title"
        android:paddingBottom="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>